--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,41 @@
-# Binaries
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 kac
-ntkac
-kafka-admin-cli
 
-# IDE
-.idea/
-.vscode/
+# Test binary, built with `go test -c`
+*.test
 
-# OS
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+vendor/
+
+# Go workspace file
+go.work
+
+# IDE specific files
+.idea
+.vscode
+*.swp
+*.swo
+
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Environment files
+.env
+*.env
+
+# Build directory
+dist/
